BUG: 143237

Check for an attachment not only in the first BodyPart but in the Message itself if it has no first BodyPart.

svn path=/trunk/KDE/kdepim/; revision=1020581